content/vault/v1.11.x/content/docs/upgrading/upgrade-to-1.11.x.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: Upgrading to Vault 1.11.x - Guides
description: |-
  This page contains the list of deprecations and important or breaking changes
  for Vault 1.11.x. Please read it carefully.
---

# Overview

This page contains the list of deprecations and important or breaking changes
for Vault 1.11.x compared to 1.10. Please read it carefully.

## Elasticsearch database secrets engine

The Elaticsearch Database Secrets Engine now uses the new `/_security` base API
path instead of `/_xpack/security` when managing Elasticsearch. If users are on
an Elasticsearch version prior to 6, they will need to switch back to the old
API path by setting the [bool config option](/vault/api-docs/secret/databases/elasticdb#use_old_xpack)
`use_old_xpack=true`.

## Changes

@include 'pgx-params.mdx'

## Known issues

@include 'raft-retry-join-failure.mdx'

@include 'tokenization-rotation-persistence.mdx'

### LDAP pagination issue

There was a regression introduced in 1.11.10 relating to LDAP maximum page sizes, resulting in
an error `no LDAP groups found in groupDN [...] only policies from locally-defined groups available`.  The issue
occurs when upgrading Vault with an instance that has an existing LDAP Auth configuration.

As a workaround, disable paged searching using the following:
```shell-session
vault write auth/ldap/config max_page_size=-1
```

#### Impacted versions

Affects Vault 1.11.10.
